[package]
name = "libwgslirpy"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/vi/wgslirpy"
license = "MIT/Apache-2.0"
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP (library part of the CLI tool)"
categories = ["network-programming"]
keywords = ["wireguard","onetun","slirp","nat"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
boringtun = "0.6.0"
bytes = "1.10.1"
hashbrown = "0.16.0"
simple-dns = "0.11.0"
smoltcp = { version = "0.12.0", default-features = false, features = ["socket", "socket-tcp", "socket-udp", "std", "proto-ipv4", "proto-ipv4-fragmentation", "proto-ipv6", "fragmentation-buffer-size-65536", "assembler-max-segment-count-32", "log", "medium-ip"] }
tokio = { version = "1.47.1", features = ["rt", "net", "sync", "macros", "io-util", "time"] }
tracing = "0.1.41"
